syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import "Enum.proto";

message RoomInfo 
{
	int32 roomId = 1;
	string name = 2;
	ERoomState status = 3;
	int32 playerCount = 4;
}

message PositionInfo 
{
	bool isRotation = 1;
	int32 posX = 2;
	int32 posY = 3;
}

message PlayerInfo
{
	int32 playerId = 1;
	string name = 2;
	string email = 3;
	EPlayerState state = 4;
}

message Block {
    int32 x = 1;
    int32 y = 2;
}